# jh-admin-cli

./: Cargo.toml  README.md
src/: cli.rs  io.rs  lib.rs  main.rs
src/models/: email.rs
src/modules/: email.rs  ldap.rs  mod.rs  user.rs
